@@ -1,3 +1,11 @@
+2003-09-26  John Beranek <jberanek@users.sourceforge.net>
+
+	* AUTHENTICATION (1.18), crypt_passwd.pl (1.1),
+	  crypt_passwd.example (1.1): Added a new script
+	  for the "ext" authentication scheme that allows
+	  you to use a password file with usernames and
+	  their crypted passwords.
+
 2003-09-23  Thierry Bothorel <thierry_bo@users.sourceforge.net>
 
 	* NEWS (1.3): Doc fixes.
